--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=DoctorAI
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/doctorai
+spring.datasource.username=datadoctorai
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+logging.level.org.hibernate=ERROR
+
+spring.jpa.open-in-view=false
+spring.security.user.name=admin
+spring.security.user.password=secret
+
