--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
+server.port=8080
 spring.application.name=DoctorAI
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/doctorai
-spring.datasource.username=datadoctorai
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 
 logging.level.org.hibernate=ERROR
@@ -13,4 +13,16 @@ logging.level.org.hibernate=ERROR
 spring.jpa.open-in-view=false
 spring.security.user.name=admin
 spring.security.user.password=secret
+
+# Hibernate configuration
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Swagger configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 
